syntax = "proto3";

package user;

service UsersService {
  rpc FindOne (UserId) returns (User) {}
  rpc FindAll (stream UserId) returns (stream User) {}
  rpc Create (User) returns (User) {}
  rpc Update (User) returns (User) {}
  rpc Remove (UserId) returns (Empty) {}
}

message UserId {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}

message Empty {}